<resources>
    <string name="app_name">CS Launcher</string>
    <string name="app_name_short">CS Launcher</string>
    <string name="generic_open">Open</string>
    <string name="generic_close">Close</string>
    <string name="generic_return">Return</string>
    <string name="generic_edit">Edit</string>
    <string name="generic_share">Share</string>
    <string name="generic_move">Move</string>
    <string name="generic_clone">Clone</string>
    <string name="generic_paste">Paste</string>
    <string name="generic_delete">Delete</string>
    <string name="generic_refresh">Refresh</string>
    <string name="generic_rename">Rename</string>
    <string name="generic_more">More</string>
    <string name="generic_search">Search</string>
    <string name="generic_tip">Tip</string>
    <string name="generic_confirm">Confirm</string>
    <string name="generic_unknown">Unknown</string>
    <string name="generic_warning">Warning</string>
    <string name="generic_confirm_delete">Are you sure you want to delete %s?</string>
    <string name="generic_confirm_delete_multiple">Are you sure you want to delete %d mods?</string>
    <string name="generic_ok">OK</string>
    <string name="generic_error">Error</string>
    <string name="generic_load">Load</string>
    <string name="generic_name">Name</string>
    <string name="generic_restart">Restart</string>
    <string name="generic_reset">Reset</string>
    <string name="generic_save">Save</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_yes">Yes</string>
    <string name="generic_no">No</string>
    <string name="generic_retry">Retry</string>
    <string name="announcements_title">Announcements</string>
    <string name="force_update_title">Update Required</string>
    <string name="force_update_message">This version is no longer supported. Please update before continuing.</string>
    <string name="force_update_action">Update Now</string>
    <string name="force_update_unavailable">Update information is unavailable. Please try again later.</string>
    <string name="generic_skip">Skip</string>
    <string name="generic_unpacking">Unpacking %s</string>
    <string name="generic_error_field_empty">This field cannot be empty</string>
    <string name="generic_keyboard">Keyboard</string>
    <string name="generic_waiting">Please wait</string>
    <string name="generic_select">Select</string>
    <string name="generic_default">Default</string>
    <string name="generic_loading">Loading</string>
    <string name="generic_optional">Optional</string>
    <string name="generic_required">Required</string>
    <string name="generic_all">All</string>
    <string name="generic_select_all">Select All</string>
    <string name="generic_wan">Ten Thousand</string>
    <string name="generic_yi">Billion</string>
    <string name="generic_login">Login</string>
    <string name="generic_wrong_tip">Something went wrong</string>
    <string name="generic_no_more_reminders">No more reminders</string>
    <string name="generic_no_network">Not connected to the internet. Please check your device\'s network connection!</string>
    <string name="generic_input_invalid">The input is invalid, please try again</string>
    <string name="generic_input_invalid_character">The name contains an invalid character: "%s"</string>
    <string name="generic_input_too_small">The value is too small, it must be at least %s</string>
    <string name="generic_input_too_big">The value is too big, it can be at most %s</string>
    <string name="generic_copied">Copied</string>
    <string name="generic_saved">Saved</string>
    <string name="generic_release">Release</string>
    <string name="generic_debug">Debug</string>
    <string name="generic_pre_release">Pre-release</string>
    <string name="generic_beta">Beta</string>
    <string name="generic_alpha">Alpha</string>
    <string name="shortcuts_subtitle">Quick access to important locations</string>
    <string name="manage_subtitle">Manage and organize your version</string>
    <string name="mods_subtitle">Manage your mods</string>
    <string name="game_path_subtitle">Open the version folder</string>
    <string name="resource_path_subtitle">Open resource packs folder</string>
    <string name="world_path_subtitle">Open worlds folder</string>
    <string name="shader_path_subtitle">Open shader packs folder</string>
    <string name="screenshot_path_subtitle">Open screenshots folder</string>
    <string name="logs_path_subtitle">Open logs folder</string>
    <string name="crash_report_subtitle">Open crash reports folder</string>
    <string name="version_settings_subtitle">Configure version settings</string>
    <string name="rename_subtitle">Rename the selected version</string>
    <string name="copy_subtitle">Create a copy of this version</string>
    <string name="delete_subtitle">Delete the selected version</string>
    <string name="versions_title">VERSIONS</string>
    <string name="versions_subtitle">Manage your game versions</string>
    <string name="actions_title">ACTIONS</string>
    <string name="error_fatal">CS Launcher crashed unexpectedly</string>
    <string name="error_no_version">No version selected!</string>
    <string name="error_show_more">Show details</string>
    <string name="error_show_less">Hide details</string>
    <string name="error_launch_failed">Failed to launch game</string>
    <string name="error_download_failed">Download failed, please retry</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="option_category_debug">Debug</string>
    <string name="option_category_control">Control</string>
    <string name="option_category_hotbar">Hotbar Detection Box</string>
    <string name="option_force_close">Force Close</string>
    <string name="option_log_out">Log Output</string>
    <string name="option_send_custom_key">Send Custom Key Code</string>
    <string name="option_edit_controls">Edit Control Layout</string>
    <string name="option_hotbar_type">Hotbar Detection Mode</string>
    <string name="option_hotbar_type_auto">Adaptive (may be inaccurate)</string>
    <string name="option_hotbar_type_manually">Manual Adjustment</string>
    <string name="option_hotbar_width">Detection Box Width</string>
    <string name="option_hotbar_height">Detection Box Height</string>
    <string name="customctrl_editor_exit_title">Exit Editor?</string>
    <string name="customctrl_editor_exit_msg">Current modifications will not be saved. Are you sure you want to exit?</string>
    <string name="customctrl_editor_exit">Exit Editor</string>
    <string name="global_save_and_exit">Save and Exit</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_size">Size</string>
    <string name="customctrl_mapping">Mapping</string>
    <string name="customctrl_orientation">Orientation</string>
    <string name="customctrl_background_color">Background Color</string>
    <string name="customctrl_corner_radius">Corner Radius</string>
    <string name="customctrl_stroke_width">Stroke Width</string>
    <string name="customctrl_stroke_color">Stroke Color</string>
    <string name="customctrl_button_opacity">Button Opacity</string>
    <string name="customctrl_addbutton">Add Button</string>
    <string name="customctrl_addbutton_drawer">Add Drawer</string>
    <string name="customctrl_addbutton_joystick">Add Joystick</string>
    <string name="customctrl_addsubbutton">Add Sub-Button</string>
    <string name="customctrl_selectdefault">Select Default Control Layout</string>
    <string name="customctrl_export">Save and Share</string>
    <string name="customctrl_passthru">Mouse Passthrough</string>
    <string name="customctrl_swipeable">Swipeable</string>
    <string name="customctrl_forward_lock">Forward Lock</string>
    <string name="customctrl_absolute_tracking">Force Finger Tracking</string>
    <string name="custom_control_title">CS Control Management</string>
    <string name="replacement_customcontrol">Replace Layout</string>
    <string name="control_primary">Left Click</string>
    <string name="control_secondary">Right Click</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: Off</string>
    <string name="control_mouseon">Mouse: On</string>
    <string name="controls_tip">Tap Gear icon ⚙ to open CS Controls Menu</string>
    <string name="controls_add_control_button">Button</string>
    <string name="controls_add_control_drawer">Drawer</string>
    <string name="controls_visibility">Visibility</string>
    <string name="controls_in_game">In-Game</string>
    <string name="controls_in_menu">In-Menu</string>
    <string name="controls_orientation_up">Up</string>
    <string name="controls_orientation_down">Down</string>
    <string name="controls_orientation_left">Left</string>
    <string name="controls_orientation_right">Right</string>
    <string name="controls_orientation_free">Free</string>
    <string name="controls_load_failed">Load Failed!</string>
    <string name="controls_unsupported_layout_version">Unsupported control layout version!</string>
    <string name="controls_create_new">Create New Layout</string>
    <string name="controls_import_control">Import Layout</string>
    <string name="controls_settings_button_snapping">Button Snapping</string>
    <string name="controls_settings_button_snapping_distance">Snapping Distance</string>
    <string name="controls_info_file_name">File Name:</string>
    <string name="controls_info_name">Layout Name:</string>
    <string name="controls_info_version">Layout Version:</string>
    <string name="controls_info_author">Author:</string>
    <string name="controls_info_desc">Description:</string>
    <string name="controls_info_more">More Info</string>
    <string name="controls_info_view">View Info</string>
    <string name="controls_info_no_info">No description available…</string>
    <string name="controls_info_invalid">Invalid File:</string>
    <string name="controls_info_default_title">Default CS Layout</string>
    <string name="controls_info_default_desc">This is the default CS Launcher control layout.</string>
    <string name="controls_set_default_message">Set this layout as default for CS Launcher?</string>
    <string name="controls_nothing">No layouts found. Restart CS Launcher to generate default.</string>
    <string name="controls_tip_set_default">Long press layout to set as default!</string>
    <string name="controller_button_a" translatable="false">A</string>
    <string name="controller_button_b" translatable="false">B</string>
    <string name="controller_button_x" translatable="false">X</string>
    <string name="controller_button_y" translatable="false">Y</string>
    <string name="controller_button_start">Start</string>
    <string name="controller_button_trigger_left">Left Trigger</string>
    <string name="controller_button_trigger_right">Right Trigger</string>
    <string name="controller_button_shoulder_left">Left Shoulder</string>
    <string name="mods_manager_title">Mod Manager</string>
    <string name="mods_total_count">Total Mods: %d</string>
    <string name="mods_enabled_count">Enabled: %d</string>
    <string name="mods_disabled_count">Disabled: %d</string>
    <string name="mods_enable_selected">Enable Selected</string>
    <string name="mods_disable_selected">Disable Selected</string>
    <string name="mods_empty_state">No mods found. Add mods or download from the internet.</string>
    <string name="custom_mouse_draw_title">Draw Your Cursor</string>
    <string name="custom_mouse_pencil">Pencil</string>
    <string name="custom_mouse_eraser">Eraser</string>
    <string name="custom_mouse_undo">Undo</string>
    <string name="custom_mouse_redo">Redo</string>
    <string name="custom_mouse_clear">Clear Canvas</string>
    <string name="custom_mouse_grid_size">Grid:</string>
    <string name="custom_mouse_save_apply">Save &amp; Apply</string>
</resources>