<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_card"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mods_manager_title"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black_or_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp">

            <TextView
                android:id="@+id/total_mods_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mods_total_count"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black_or_white" />

            <TextView
                android:id="@+id/enabled_mods_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mods_enabled_count"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/green"
                android:gravity="end" />

            <TextView
                android:id="@+id/disabled_mods_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mods_disabled_count"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/red"
                android:gravity="end" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mods_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toTopOf="@id/bottom_action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/mod_list_item" />

    <LinearLayout
        android:id="@+id/bottom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_card"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/select_all_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/generic_select_all"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black_or_white"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/text_background_fill" />

        <TextView
            android:id="@+id/enable_selected_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mods_enable_selected"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/green"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/text_background_fill" />

        <TextView
            android:id="@+id/disable_selected_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mods_disable_selected"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/red"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/text_background_fill" />

        <TextView
            android:id="@+id/delete_selected_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/generic_delete"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/red"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_mod_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/black_or_white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/download_mod_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:src="@drawable/ic_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_mod_fab"
        app:tint="@color/black_or_white" />

    <TextView
        android:id="@+id/empty_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mods_empty_state"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/gray"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>